--- a/riffshareiii/theme/colordarkgreen.css
+++ b/riffshareiii/theme/colordarkgreen.css
@@ -5,7 +5,7 @@
 	--color-shadow: #99999966;
 
     --color-background: #000;
-    --panel-color2: #fff;
+    --line-color2: #fff;
     --color-panel: #333;
 
 	--color-focus: #ccf;
