--- a/riffshareiii/theme/colordarkred.css
+++ b/riffshareiii/theme/colordarkred.css
@@ -8,7 +8,7 @@
 	--color-shadow: #00000066;
 
     --color-background: #ddeeff;
-    --panel-color2: #000;
+    --line-color2: #000;
     --color-panel: #ccd;
 
 	--color-focus: #06f;
