--- a/riffshareiii/theme/plugin.css
+++ b/riffshareiii/theme/plugin.css
@@ -31,7 +31,7 @@
 #pluginHeader{
 	width:100%;
 	height:1.0cm;
-	background-color: var(--panel-color);
+	background-color: var(--line-color);
 	border-radius: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
     flex-shrink: 0;
@@ -53,7 +53,7 @@
 }
 #pluginCancel{
 	border-radius: 0.4cm;
-	background-color: var(--action-color);
+	background-color: var(--click-color);
 	color: var(--main-color);
 	box-shadow:inset 0px 0px 0px 0.5px var(--main-color);
 	text-shadow2: 0.25px 0px var(--main-color),-0.25px 0px var(--main-color),0px 0.25px var(--main-color),0px -0.25px var(--main-color);
@@ -81,7 +81,7 @@
 }
 #pluginRefresh{
 	border-radius: 0.4cm;
-	background-color: var(--action-color);
+	background-color: var(--click-color);
 	color: var(--main-color);
 	text-shadow2: 0.25px 0px var(--main-color),-0.25px 0px var(--main-color),0px 0.25px var(--main-color),0px -0.25px var(--main-color);
     font-size: var(--label-05cm);
