--- a/riffshareiii/theme/colordarkblue.css
+++ b/riffshareiii/theme/colordarkblue.css
@@ -4,7 +4,7 @@
     --background-color: #6688aa;
     --line-color: #ccdddd;
     --line-color: #111133;
-    --focus-color: #ff4455;
+    --main-color: #ff4455;
     --interaction-color: #9f5ba5;
     --label-color: #eee133;
 
