--- a/riffshareiii/theme/leftbar.css
+++ b/riffshareiii/theme/leftbar.css
@@ -191,25 +191,25 @@
 .samplerRowLabel025 {
     fill: var(--line-color);
 	fill-opacity: 50%;
-    font-size: calc(2*0.125*var(--tapSize));
+    font-size: calc(0.25*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel05 {
     fill: var(--line-color);
 	fill-opacity: 50%;
-    font-size: calc(4*0.125*var(--tapSize));
+    font-size: calc(0.5*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel1 {
     fill: var(--line-color);
 	fill-opacity: 50%;
-    font-size: calc(6*0.125*var(--tapSize));
+    font-size: calc(0.75*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel2 {
     fill: var(--line-color);
 	fill-opacity: 50%;
-    font-size: calc(8*0.125*var(--tapSize));
+    font-size: calc(1*var(--tapSize));
 	pointer-events: none;
 }
 
