--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -155,7 +155,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	min-height: 100%;
-	background-image: url("bg/burevestnik.jpg");
+	background-image2: url("bg/burevestnik.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
