--- a/riffshareiii/theme/fanpane.css
+++ b/riffshareiii/theme/fanpane.css
@@ -78,12 +78,17 @@
 	pointer-events: none;
 
 }
-
 .fanConnectionButton {
 	cursor: ns-resize;
 	stroke: var(--main-color);
 	fill: var(--drag-color);
 	stroke-width: calc(0.0256*var(--tapSize));
+}
+.fanSampleDrragger {
+	cursor: ns-resize;
+	stroke: var(--main-color);
+	fill: var(--drag-color);
+	stroke-width: calc(0.0512*var(--tapSize));
 }
 
 .fanConnectionBase {
