--- a/riffshareiii/theme/timeselect.css
+++ b/riffshareiii/theme/timeselect.css
@@ -16,7 +16,7 @@
 }
 .timeMarkButtonCircle{
     fill: var(--click-color);
-	
+	cursor:pointer;
 }
 .timeMarkButtonBorder{
     fill: var(--main-color);
