--- a/riffshareiii/theme/timeselect.css
+++ b/riffshareiii/theme/timeselect.css
@@ -1,87 +1,120 @@
-.timeMeasureMark22222{
-    fill: var(--line-color);
+.timeMeasureMark22222 {
+	fill: var(--line-color);
 	fill-opacity: 25%;
 }
-.timeSelection{
-	fill-opacity: 40%;
-	fill: var(--main-color);
-    pointer-events: none;
-    animation: focusFlashFill 4s linear infinite;
-	
+
+.positionMark1 {
+	stop-color: var(--drag-color);
+	stop-opacity: 0%;
 }
-.timeSubMark{
-    fill: var(--line-color);
+
+.positionMark2 {
+	stop-color: var(--drag-color);
+	stop-opacity: 50%;
+}
+
+.positionMark3 {
+	stop-color: var(--drag-color);
+	stop-opacity: 100%;
+}
+
+.positionTimeMark {
+	fill2: var(--drag-color);
+	fill: url(#positionTimeMarkFill);
+}
+
+.timeSelection {
+	fill-opacity: 10%;
+	fill: var(--line-color);
+	pointer-events: none;
+	animation2: focusFlashFill 4s linear infinite;
+
+}
+
+.timeSubMark {
+	fill: var(--line-color);
 	fill-opacity: 50%;
-	
+
 }
-.timeMarkButtonCircle{
-    fill: var(--click-color);
-	cursor:pointer;
+
+.timeMarkButtonCircle {
+	fill: var(--click-color);
+	cursor: pointer;
 }
-.timeMarkButtonBorder{
-    fill: var(--main-color);
-	
+
+.timeMarkButtonBorder {
+	fill: var(--main-color);
+
 }
 
 .timeBarNum025 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.25*var(--tapSize));
-    text-anchor22: start;
+	font-size: calc(0.25*var(--tapSize));
+	text-anchor22: start;
 	pointer-events: none;
 }
+
 .timeBarNum05 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*var(--tapSize));
+	font-size: calc(0.5*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum1 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(1*var(--tapSize));
+	font-size: calc(1*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum2 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(2*var(--tapSize));
+	font-size: calc(2*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum4 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(4*var(--tapSize));
+	font-size: calc(4*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum8 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(8*var(--tapSize));
+	font-size: calc(8*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum16 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(16*var(--tapSize));
+	font-size: calc(16*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum32 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(32*var(--tapSize));
+	font-size: calc(32*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum64 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(64*var(--tapSize));
+	font-size: calc(64*var(--tapSize));
 	pointer-events: none;
 }
+
 .timeBarNum128 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(128*var(--tapSize));
+	font-size: calc(128*var(--tapSize));
 	pointer-events: none;
 }
 
@@ -93,62 +126,71 @@
 
 
 .timeBarInfo025 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*0.25*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*0.25*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo05 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*0.5*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*0.5*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo1 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*1*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*1*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo2 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*2*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*2*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo4 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*4*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*4*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo8 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*8*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*8*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo16 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*16*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*16*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo32 {
-    fill: var(--line-color);
+	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*32*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*32*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo64 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*64*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*64*var(--tapSize));
+	text-anchor2: end;
 }
+
 .timeBarInfo128 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-    font-size: calc(0.5*128*var(--tapSize));
-    text-anchor2: end;
+	font-size: calc(0.5*128*var(--tapSize));
+	text-anchor2: end;
 }
